<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registergreet"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/image"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:hint="@string/register_login"
        android:id="@+id/register_login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:hint="@string/register_password"
        android:id="@+id/register_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:hint="@string/register_email"
        android:id="@+id/register_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/registruotis"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/Register"
            android:text="@string/button_register" />
        <Button
            android:id="@+id/exit_btn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>